--- a/readme.mb
+++ b/readme.mb
@@ -1,3 +1,1 @@
-De frente a uma necessidade minha, nas rotinas de trabalho, onde diariamente eu precisava criar algumas senhas e ficava pensando
-qual senha criar, decidi buscar por alguns codigos no youtube que me ajudasse nessa rotina, juntando algumas soluções surgiu esse projeto,
-gerador de token Speed Token Gun 0.1!
+Fiz esse modelo de gerador senha para alegria de minha filha Duda!
